# docker_workshop

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
basic_example/: app.py
